# rafstonks

./: README.md  devnotes.md  main.py  pyproject.toml  replacement_db.py  requirements.txt
static/: script4.js  styles2.css
templates/: base.html  board.html  index.html  mobile.html
