[tool.poetry]
name = "repl_python3_rafstonks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.5"
Flask = "^2.2.2"
Flask-Mobility = "^1.1.0"
Flask-SocketIO = "^5.3.1"
gevent = "^22.10.2"
gevent-websocket = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
